clusters/oracle-cluster/apps/adguard-home/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: adguard-home
  namespace: adguard-home
  labels:
    app: adguard-home
spec:
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: adguard-home
        image: adguard/adguardhome:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 53
            protocol: UDP
          - containerPort: 3000
            protocol: TCP    
        volumeMounts:
        - name: adguard-data
          mountPath: /opt/adguardhome/work
          subPath: work
        - name: adguard-data
          mountPath: /opt/adguardhome/conf
          subPath: conf  
      terminationGracePeriodSeconds: 30
      volumes:
      - name: adguard-data
        persistentVolumeClaim:
          claimName: adguard-home-pvc
