clusters/oracle-cluster/apps/adguard-home/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  namespace: adguard-home
  labels:
    app: adguard-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      containers:
      - name: adguard-home
        image: adguard/adguardhome:latest@sha256:2979cc78a28aceb77f90980a5440578dbb7bc406dffe261e9ae402750193bde0
        ports:
          - containerPort: 53
            protocol: UDP
          - containerPort: 53
            protocol: TCP
          - containerPort: 3000
            protocol: TCP
        volumeMounts:
        - name: adguard-data
          mountPath: /opt/adguardhome/work
          subPath: work
        - name: adguard-data
          mountPath: /opt/adguardhome/conf
          subPath: conf
      terminationGracePeriodSeconds: 30
      volumes:
      - name: adguard-data
        persistentVolumeClaim:
          claimName: adguard-home-pvc
