clusters/oracle-cluster/apps/adguard-home/service.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: adguard-home-service
    namespace: adguard-home
spec:
    selector:
        app: adguard-home
    type: LoadBalancer
    ports:
        - name: dns
          protocol: UDP
          port: 53
          targetPort: 53
        - name: dns-tcp
          protocol: TCP
          port: 53
          targetPort: 53
        - name: adguard-ui-config
          port: 3000
          targetPort: 3000
        - name: adguard-ui
          port: 8082
          targetPort: 80
    externalIPs:
        - ENC[AES256_GCM,data:NH8FH5pkZEzQSiDciB6V,iv:JBO2uHYCdYQ6wvYIiIUEKxjuVSZc11rBBv/SoEv/IWs=,tag:tdVtpOL6RRY3vD2Ka9RB0w==,type:str]
        - ENC[AES256_GCM,data:ZjN/Td8fCKnUUgQEWLU=,iv:mBZORiARY/Iku6auyQ+iZIEMj90EXechiUx/rlicNlY=,tag:uVKIJHVWxYbj4E83XSyJpA==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1guzav4sek0x4l3sqx498d34w3z7yy8jact0yav53uza3zrmyf43qcvyza6
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4aWkzTWxwWE15Qkw0Umo2
[...]
            995V++vzeE3PHI+007lUrNDN7iu3JGVD4v4T4b5RMFEAw5gVnsvveQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2022-12-26T15:03:25Z"
    mac: ENC[AES256_GCM,data:fF0+fp9v5xd3FZn1sb49yGsCZgVb3rXKbZE/9jAkvq3S3aN5h91IVadFCCC3+nPlfRw+corj3BlCYt2FCwaOmYdGP6SuDOYFimPdahC46jI8/ATL2gf4ivrcgJavDDG+ODjhHYenF3OOpxqNGoSRyuuZt50f94jn5a6FUNLbing=,iv:i79JS52GVRyRazIJoS+j82B4xez1fGI5RcIbH0MjfLs=,tag:r5q3z0vY7Em/r5AvpTpj3g==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalIPs)$
    version: 3.7.3
