clusters/oracle-cluster/apps/adguard-home/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: adguard-home-service
    namespace: adguard-home
spec:
    selector:
        app: adguard-home
    type: LoadBalancer
    externalTrafficPolicy: Local
    ports:
        - name: dns
          protocol: UDP
          port: 53
          targetPort: 53
        - name: dns-tcp
          protocol: TCP
          port: 53
          targetPort: 53
        - name: adguard-ui-config
          port: 3000
          targetPort: 3000
        - name: adguard-ui
          port: 8082
          targetPort: 80
