clusters/oracle-cluster/apps/adguard-home/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: adguard-home-ingress
    namespace: adguard-home
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:SHG8Vhpzt50G0WiptwqhWuhpEAwnOXkgyEqjRW1anjM=,iv:7jbUPAVWweotUVmuqTu+Btyt8PsyW0d6DNpBO1+VFUk=,tag:U13DHLr28ntiqT4m/JjLtQ==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:94tXurOivHxSMODjUqBK4BP+BdWZwS7mbaKQZF3O0po=,iv:pfPL2NTcfG+jOIL/hV29OK8UHApdgcL/350xmiBIHIU=,tag:hb++ysE+3sf0nAnFUmgu7g==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: adguard-home-service
                        port:
                            number: 3000
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1guzav4sek0x4l3sqx498d34w3z7yy8jact0yav53uza3zrmyf43qcvyza6
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5bUw2cXNlWVk1cVZkOWJ4
[...]
            G7pT24Ie58X9EyvJNSe6e7zly3ux6DYMOSMdcGxATrFyHnKRy2cTGQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2022-12-25T19:31:22Z"
    mac: ENC[AES256_GCM,data:sSFCzG2bEAXCpCIWhY0GjKENNpqRXj/6+Tp2lyHozD1FINHU5T7TCNhKDza2AaOoYrz2jjmukZN+f3VIVnKvhT3paGqAg3bUD94gIY+FDORE0N056OpVbCkljiRdTWju9C+9itqnn8tqKdUqhN2f8vLwM0syojBF17p9ZrHgtHM=,iv:trvtWBAi2lf12pUDeX01YaaCkAnopTCbLjpGCcAUxmo=,tag:/mYXPzRgFgKRFwaewXulvg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host)$
    version: 3.7.3
